--- a/DMTR-211.tex
+++ b/DMTR-211.tex
@@ -44,7 +44,7 @@ an LSST level 2 milestone pertaining to the Data Management Subsystem.
 \subsection{Objectives}
 \label{sect:objectives}
 
- TBD
+ 
 
 
 
@@ -103,7 +103,7 @@ The documentation related to this test campaign should be provided in the follow
 (as per Verification Artifacts in Jira test plan LVV-P69).
 
 \begin{itemize}
-\item Not Specified
+\item DocuShare Collection Not Specified
 \end{itemize}
 
 
