Jenkins automatic update commit

--- a/DMTR-211.tex
+++ b/DMTR-211.tex
@@ -3,11 +3,9 @@
 \usepackage{longtable,booktabs}
 \usepackage{enumitem}
 \usepackage{arydshln}
-\usepackage{attachfile}
 
 \input meta.tex
 
-\newcommand{\attachmentsUrl}{https://github.com/\gitorg/\lsstDocType-\lsstDocNum/blob/\gitref/attachments}
 \providecommand{\tightlist}{
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 
@@ -24,9 +22,10 @@
 \title{ LVV-P69 Dm-Suit-8 Suit Portal Integrated With Workspace Test Plan and Report}
 \setDocRef{\lsstDocType-\lsstDocNum}
 \date{\vcsdate}
+\setDocUpstreamLocation{\url{https://github.com/lsst/lsst-texmf/examples}}
 \author{ Gregory Dubois-Felsmann }
 
-\input{history_and_info.tex}
+\input history_and_info.tex
 
 
 \setDocAbstract{
@@ -66,34 +65,31 @@ LSST Science Platform Requirements
 \subsection{Document Overview}
 \label{sect:docoverview}
 
-This document was generated from Jira, obtaining the relevant information from the
-\href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testPlan/LVV-P69}{LVV-P69}
+This document was generated from Jira, obtaining the relevant information from the 
+\href{https://jira.lsstcorp.org/secure/Tests.jspa#/testPlan/LVV-P69}{LVV-P69}
 ~Jira Test Plan and related Test Cycles (
-\href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testCycle/LVV-C151}{LVV-C151}
+  \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCycle/LVV-C151}{LVV-C151}
 ).
 
 Section \ref{sect:intro} provides an overview of the test campaign, the system under test (\product{}),
 the applicable documentation, and explains how this document is organized.
-Section \ref{sect:testplan} provides additional information about the test plan, like for example the configuration
-used for this test or related documentation.
+Section \ref{sect:configuration}  describes the configuration used for this test.
 Section \ref{sect:personnel} describes the necessary roles and lists the individuals assigned to them.
+%Section \ref{sect:plannedtestactivities} provides the list of planned test cycles and test cases,
+including all relevant information that fully describes the test campaign.
 
 Section \ref{sect:overview} provides a summary of the test results, including an overview in Table \ref{table:summary},
 an overall assessment statement and suggestions for possible improvements.
 Section \ref{sect:detailedtestresults} provides detailed results for each step in each test case.
 
-The current status of test plan \href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testPlan/LVV-P69}{LVV-P69} in Jira is \textbf{ Draft }.
+The current status of test plan LVV-P69 in Jira is \textbf{ Draft }.
 
 \subsection{References}
 \label{sect:references}
 \renewcommand{\refname}{}
-\bibliography{lsst,refs,books,refs_ads,local}
-
-
-\newpage
-\section{Test Plan Details}
-\label{sect:testplan}
-
+\bibliography{lsst,refs,books,refs_ads}
+\section{Test Configuration}
+\label{sect:configuration}
 
 \subsection{Data Collection}
 
@@ -106,42 +102,22 @@ The current status of test plan \href{https://jira.lsstcorp.org/secure/Tests.jsp
 
 
 
-\subsection{Related Documentation}
-
-The documentation related to this test campaign should be provided in the following DocuShare Collection
-(as per Verification Artifacts in Jira test plan LVV-P69).
-
-\begin{itemize}
-\item DocuShare Collection Not Specified
-\end{itemize}
-
-
-
-\subsection{PMCS Activity}
-
-Primavera milestones related to the test campaign.
-
-\begin{itemize}
-\item None
-\end{itemize}
-
-
 \newpage
 \section{Personnel}
 \label{sect:personnel}
 
-The personnel involved in the test campaign is shown in the following table.
+The personnel involved in the test campaign are shown in the following table.
 
-{\small
 \begin{longtable}{p{3cm}p{3cm}p{3cm}p{6cm}}
 \hline
-\multicolumn{2}{r}{T. Plan \href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testPlan/LVV-P69}{LVV-P69} owner:} &
+\multicolumn{2}{r}{Test Plan (LVV-P69) owner:} &
 \multicolumn{2}{l}{\textbf{ Gregory Dubois-Felsmann } }\\\hline
-\multicolumn{2}{r}{T. Cycle \href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testCycle/LVV-C151}{LVV-C151} owner:} &
+\multicolumn{2}{r}{ LVV-C151 owner:} &
 \multicolumn{2}{l}{\textbf{
-Gregory Dubois-Felsmann}
+    Gregory Dubois-Felsmann
+}
 } \\\hline
-\textbf{Test Cases} & \textbf{Assigned to} & \textbf{Executed by} & \textbf{Additional Test Personnel} \\ \hline
+\textbf{Test Case} & \textbf{Assigned to} & \textbf{Executed by} & \textbf{Additional Test Personnel} \\ \hline
 \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T681}{LVV-T681}
 & {\small Jeffrey Carlin } & {\small  } &
 \begin{minipage}[]{6cm}
@@ -175,7 +151,6 @@ Gregory Dubois-Felsmann}
 \end{minipage}
 \\ \hline
 \end{longtable}
-}
 
 \newpage
 
@@ -185,58 +160,53 @@ Gregory Dubois-Felsmann}
 \subsection{Summary}
 \label{sect:summarytable}
 
-{\small
-\begin{longtable}{p{2cm}cp{2.3cm}p{8.6cm}p{2.3cm}}
+\begin{longtable}{p{2cm}p{2.5cm}p{9cm}p{2.5cm}}
 \toprule
-\multicolumn{2}{r}{ T. Plan \href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testPlan/LVV-P69}{LVV-P69}:} &
-\multicolumn{2}{p{10.9cm}}{\textbf{ DM-SUIT-8 SUIT Portal integrated with workspace }} & Draft \\\hline
-\multicolumn{2}{r}{ T. Cycle \href{https://jira.lsstcorp.org/secure/Tests.jspa\#/testCycle/LVV-C151}{LVV-C151}:} &
-\multicolumn{2}{p{10.9cm}}{\textbf{ DM-SUIT-8 SUIT Portal integrated with workspace }} & Not Executed \\\hline
-\textbf{Test Cases} &  \textbf{Ver.} & \textbf{Status} & \textbf{Comment} & \textbf{Issues} \\\toprule
+\multicolumn{3}{p{13.5cm}}{ Test Plan {\bf LVV-P69: DM-SUIT-8 SUIT Portal integrated with workspace }} & Draft \\\hline
+
+  \multicolumn{3}{p{13.5cm}}{ Test Cycle {\bf LVV-C151: DM-SUIT-8 SUIT Portal integrated with workspace }} & Not Executed \\\hline
+
+  {\bf \footnotesize test case} & {\bf \footnotesize status} & {\bf \footnotesize comment} & {\bf \footnotesize issues} \\\toprule
+
 \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T681}{LVV-T681}
-&  1
-& Not Executed &
-\begin{minipage}[]{9cm}
-\smallskip
-
-\medskip
-\end{minipage}
-&
-\\\hline
+    & Not Executed &
+    \begin{minipage}[]{9cm}
+    \smallskip
+    
+    \medskip
+    \end{minipage}
+    &
+    \\\hline
 \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T744}{LVV-T744}
-&  1
-& Not Executed &
-\begin{minipage}[]{9cm}
-\smallskip
-
-\medskip
-\end{minipage}
-&
-\\\hline
+    & Not Executed &
+    \begin{minipage}[]{9cm}
+    \smallskip
+    
+    \medskip
+    \end{minipage}
+    &
+    \\\hline
 \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T745}{LVV-T745}
-&  1
-& Not Executed &
-\begin{minipage}[]{9cm}
-\smallskip
-
-\medskip
-\end{minipage}
-&
-\\\hline
+    & Not Executed &
+    \begin{minipage}[]{9cm}
+    \smallskip
+    
+    \medskip
+    \end{minipage}
+    &
+    \\\hline
 \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T636}{LVV-T636}
-&  1
-& Not Executed &
-\begin{minipage}[]{9cm}
-\smallskip
-
-\medskip
-\end{minipage}
-&
-\\\hline
+    & Not Executed &
+    \begin{minipage}[]{9cm}
+    \smallskip
+    
+    \medskip
+    \end{minipage}
+    &
+    \\\hline
 \caption{Test Campaign Summary}
 \label{table:summary}
 \end{longtable}
-}
 
 \subsection{Overall Assessment}
 \label{sect:overallassessment}
@@ -256,7 +226,7 @@ Not yet available.
 
 Open test cycle {\it \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testrun/LVV-C151}{DM-SUIT-8 SUIT Portal integrated with workspace}} in Jira.
 
-Test Cycle name: DM-SUIT-8 SUIT Portal integrated with workspace\\
+DM-SUIT-8 SUIT Portal integrated with workspace\\
 Status: Not Executed
 
 
@@ -269,9 +239,8 @@ Not provided.
 
 \subsubsection{Test Cases in LVV-C151 Test Cycle}
 
-\paragraph{ LVV-T681 - Verify visualization of workspace data }\mbox{}\\
+\paragraph{Test Case LVV-T681 - Verify visualization of workspace data }\mbox{}\\
 
-Version \textbf{1}.
 Open  \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T681}{\textit{ LVV-T681 } }
 test case in Jira.
 
@@ -316,9 +285,8 @@ Detailed steps results:
 
 \end{longtable}
 
-\paragraph{ LVV-T744 - Verify tabular data download }\mbox{}\\
+\paragraph{Test Case LVV-T744 - Verify tabular data download }\mbox{}\\
 
-Version \textbf{1}.
 Open  \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T744}{\textit{ LVV-T744 } }
 test case in Jira.
 
@@ -365,9 +333,8 @@ Detailed steps results:
 
 \end{longtable}
 
-\paragraph{ LVV-T745 - Verify image data download }\mbox{}\\
+\paragraph{Test Case LVV-T745 - Verify image data download }\mbox{}\\
 
-Version \textbf{1}.
 Open  \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T745}{\textit{ LVV-T745 } }
 test case in Jira.
 
@@ -413,9 +380,8 @@ Detailed steps results:
 
 \end{longtable}
 
-\paragraph{ LVV-T636 - Verify Portal access to Workspace }\mbox{}\\
+\paragraph{Test Case LVV-T636 - Verify Portal access to Workspace }\mbox{}\\
 
-Version \textbf{1}.
 Open  \href{https://jira.lsstcorp.org/secure/Tests.jspa#/testCase/LVV-T636}{\textit{ LVV-T636 } }
 test case in Jira.
 
